--- a/demo_ConfidentSinkhornAllocation.ipynb
+++ b/demo_ConfidentSinkhornAllocation.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNyTAbZeTe95xOxlwycvjwi",
+      "authorship_tag": "ABX9TyPEFvtXwsiV49U5Vz+jskYt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -213,25 +213,25 @@
         "#!pip install --requirement https://github.com/ntienvu/confident_sinkhorn_allocation/blob/master/requirements.txt\n",
         "\n",
         "\n",
-        "!pip install colorama==0.4.5\n",
-        "!pip install cycler==0.11.0\n",
-        "!pip install fonttools==4.33.3\n",
-        "!pip install joblib==1.1.0\n",
-        "!pip install kiwisolver==1.4.3\n",
-        "!pip install matplotlib==3.5.2\n",
-        "!pip install numpy==1.23.0\n",
-        "!pip install packaging==21.3\n",
-        "!pip install pandas==1.4.3\n",
-        "!pip install Pillow==9.2.0\n",
-        "!pip install pyparsing==3.0.9\n",
-        "!pip install python-dateutil==2.8.2\n",
-        "!pip install pytz==2022.1\n",
-        "!pip install scikit-learn==1.1.1\n",
-        "!pip install scipy==1.8.1\n",
-        "!pip install six==1.16.0\n",
-        "!pip install threadpoolctl==3.1.0\n",
-        "!pip install tqdm==4.64.0\n",
-        "!pip install xgboost==1.6.1"
+        "# !pip install colorama==0.4.5\n",
+        "# !pip install cycler==0.11.0\n",
+        "# !pip install fonttools==4.33.3\n",
+        "# !pip install joblib==1.1.0\n",
+        "# !pip install kiwisolver==1.4.3\n",
+        "# !pip install matplotlib==3.5.2\n",
+        "# !pip install numpy==1.23.0\n",
+        "# !pip install packaging==21.3\n",
+        "# !pip install pandas==1.4.3\n",
+        "# !pip install Pillow==9.2.0\n",
+        "# !pip install pyparsing==3.0.9\n",
+        "# !pip install python-dateutil==2.8.2\n",
+        "# !pip install pytz==2022.1\n",
+        "# !pip install scikit-learn==1.1.1\n",
+        "# !pip install scipy==1.8.1\n",
+        "# !pip install six==1.16.0\n",
+        "# !pip install threadpoolctl==3.1.0\n",
+        "# !pip install tqdm==4.64.0\n",
+        "# !pip install xgboost==1.6.1"
       ]
     },
     {
