--- a/demo_ConfidentSinkhornAllocation.ipynb
+++ b/demo_ConfidentSinkhornAllocation.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPEFvtXwsiV49U5Vz+jskYt",
+      "authorship_tag": "ABX9TyOveTgNrqdUdrqpJMaoBnhn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -237,13 +237,108 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "!pip install git+https://ntienvu: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@github.com/ntienvu/confident_sinkhorn_allocation"
       ],
       "metadata": {
-        "id": "53ok293zvVnp"
+        "id": "53ok293zvVnp",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
+        },
+        "outputId": "0cc7811f-d8d7-4eaa-e025-8fd3425029d2"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
+            "Collecting git+https://ntienvu:****@github.com/ntienvu/confident_sinkhorn_allocation\n",
+            "  Cloning https://ntienvu:****@github.com/ntienvu/confident_sinkhorn_allocation to /tmp/pip-req-build-yr7avi4v\n",
+            "  Running command git clone -q 'https://ntienvu:****@github.com/ntienvu/confident_sinkhorn_allocation' /tmp/pip-req-build-yr7avi4v\n",
+            "Collecting colorama>=0.4.5\n",
+            "  Downloading colorama-0.4.5-py2.py3-none-any.whl (16 kB)\n",
+            "Requirement already satisfied: cycler>=0.11.0 in /usr/local/lib/python3.7/dist-packages (from csa==1.0) (0.11.0)\n",
+            "Collecting fonttools>=4.33.3\n",
+            "  Downloading fonttools-4.33.3-py3-none-any.whl (930 kB)\n",
+            "\u001b[K     |████████████████████████████████| 930 kB 3.9 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: joblib>=1.1.0 in /usr/local/lib/python3.7/dist-packages (from csa==1.0) (1.1.0)\n",
+            "Requirement already satisfied: kiwisolver>=1.4.3 in /usr/local/lib/python3.7/dist-packages (from csa==1.0) (1.4.3)\n",
+            "Collecting matplotlib>=3.5.2\n",
+            "  Downloading matplotlib-3.5.2-cp37-cp37m-manylinux_2_5_x86_64.manylinux1_x86_64.whl (11.2 MB)\n",
+            "\u001b[K     |████████████████████████████████| 11.2 MB 42.0 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: numpy>=1.21.0 in /usr/local/lib/python3.7/dist-packages (from csa==1.0) (1.21.6)\n",
+            "Requirement already satisfied: packaging>=21.3 in /usr/local/lib/python3.7/dist-packages (from csa==1.0) (21.3)\n",
+            "Requirement already satisfied: pandas>=1.2.3 in /usr/local/lib/python3.7/dist-packages (from csa==1.0) (1.3.5)\n",
+            "Collecting Pillow>=9.2.0\n",
+            "  Downloading Pillow-9.2.0-cp37-cp37m-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (3.1 MB)\n",
+            "\u001b[K     |████████████████████████████████| 3.1 MB 19.6 MB/s \n",
+            "\u001b[?25hRequirement already satisfied: pyparsing>=3.0.9 in /usr/local/lib/python3.7/dist-packages (from csa==1.0) (3.0.9)\n",
+            "Requirement already satisfied: python-dateutil>=2.8.2 in /usr/local/lib/python3.7/dist-packages (from csa==1.0) (2.8.2)\n",
+            "Requirement already satisfied: pytz>=2022.1 in /usr/local/lib/python3.7/dist-packages (from csa==1.0) (2022.1)\n",
+            "Requirement already satisfied: scikit-learn>=1.0 in /usr/local/lib/python3.7/dist-packages (from csa==1.0) (1.0.2)\n",
+            "Collecting scipy>=1.7.1\n",
+            "  Downloading scipy-1.7.3-cp37-cp37m-manylinux_2_12_x86_64.manylinux2010_x86_64.whl (38.1 MB)\n",
+            "\u001b[K     |████████████████████████████████| 38.1 MB 284 kB/s \n",
+            "\u001b[?25hCollecting six>=1.16.0\n",
+            "  Downloading six-1.16.0-py2.py3-none-any.whl (11 kB)\n",
+            "Requirement already satisfied: threadpoolctl>=3.1.0 in /usr/local/lib/python3.7/dist-packages (from csa==1.0) (3.1.0)\n",
+            "Requirement already satisfied: tqdm>=4.64.0 in /usr/local/lib/python3.7/dist-packages (from csa==1.0) (4.64.0)\n",
+            "Collecting xgboost>=1.6.1\n",
+            "  Downloading xgboost-1.6.1-py3-none-manylinux2014_x86_64.whl (192.9 MB)\n",
+            "\u001b[K     |████████████████████████████████| 192.9 MB 61 kB/s \n",
+            "\u001b[?25hRequirement already satisfied: typing-extensions in /usr/local/lib/python3.7/dist-packages (from kiwisolver>=1.4.3->csa==1.0) (4.1.1)\n",
+            "Building wheels for collected packages: csa\n",
+            "  Building wheel for csa (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for csa: filename=csa-1.0-py3-none-any.whl size=37437 sha256=330e4c8d28d2ee600b114cd2578496982274ff8f91f261d30905eadca7c06f22\n",
+            "  Stored in directory: /tmp/pip-ephem-wheel-cache-932gui0h/wheels/f8/a6/d2/85775e4ad67413a2107706e416bca603ec61caa57a672bd339\n",
+            "Successfully built csa\n",
+            "Installing collected packages: six, scipy, Pillow, fonttools, xgboost, matplotlib, colorama, csa\n",
+            "  Attempting uninstall: six\n",
+            "    Found existing installation: six 1.15.0\n",
+            "    Uninstalling six-1.15.0:\n",
+            "      Successfully uninstalled six-1.15.0\n",
+            "  Attempting uninstall: scipy\n",
+            "    Found existing installation: scipy 1.4.1\n",
+            "    Uninstalling scipy-1.4.1:\n",
+            "      Successfully uninstalled scipy-1.4.1\n",
+            "  Attempting uninstall: Pillow\n",
+            "    Found existing installation: Pillow 7.1.2\n",
+            "    Uninstalling Pillow-7.1.2:\n",
+            "      Successfully uninstalled Pillow-7.1.2\n",
+            "  Attempting uninstall: xgboost\n",
+            "    Found existing installation: xgboost 0.90\n",
+            "    Uninstalling xgboost-0.90:\n",
+            "      Successfully uninstalled xgboost-0.90\n",
+            "  Attempting uninstall: matplotlib\n",
+            "    Found existing installation: matplotlib 3.2.2\n",
+            "    Uninstalling matplotlib-3.2.2:\n",
+            "      Successfully uninstalled matplotlib-3.2.2\n",
+            "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+            "google-colab 1.0.0 requires six~=1.15.0, but you have six 1.16.0 which is incompatible.\n",
+            "datascience 0.10.6 requires folium==0.2.1, but you have folium 0.8.3 which is incompatible.\n",
+            "albumentations 0.1.12 requires imgaug<0.2.7,>=0.2.5, but you have imgaug 0.2.9 which is incompatible.\u001b[0m\n",
+            "Successfully installed Pillow-9.2.0 colorama-0.4.5 csa-1.0 fonttools-4.33.3 matplotlib-3.5.2 scipy-1.7.3 six-1.16.0 xgboost-1.6.1\n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "application/vnd.colab-display-data+json": {
+              "pip_warning": {
+                "packages": [
+                  "PIL",
+                  "matplotlib",
+                  "mpl_toolkits",
+                  "six"
+                ]
+              }
+            }
+          },
+          "metadata": {}
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -266,51 +361,54 @@
         "import logging\n",
         "import pickle\n",
         "from tqdm import tqdm\n",
-        "from confident_sinkhorn_allocation.algorithm.pseudo_labeling import Pseudo_Labeling\n",
+        "from algorithm.pseudo_labeling import Pseudo_Labeling\n",
         "#from confident_sinkhorn_allocation.algorithm.flexmatch import FlexMatch\n",
         "#from confident_sinkhorn_allocation.algorithm.ups import UPS\n",
-        "from confident_sinkhorn_allocation.algorithm.csa import CSA\n",
+        "from algorithm.csa import CSA\n",
         "\n",
         "\n",
-        "from confident_sinkhorn_allocation.utilities.utils import get_train_test_unlabeled,append_acc_early_termination\n",
-        "from confident_sinkhorn_allocation.utilities.utils import get_train_test_unlabeled_for_multilabel_classification\n",
+        "from utilities.utils import get_train_test_unlabeled,append_acc_early_termination\n",
+        "from utilities.utils import get_train_test_unlabeled_for_multilabel_classification\n",
         "\n",
         "import warnings\n",
         "warnings.filterwarnings('ignore')"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 373
-        },
-        "id": "Uy43buLIvVyv",
-        "outputId": "ef480dd2-5efd-4c80-9a58-d334d4f9c5b1"
+        "id": "Uy43buLIvVyv"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Get the data from the list of datasets:\n",
+        "\n",
+        "*segment_2310_20\n",
+        "*wdbc_569_31\n",
+        "*analcatdata_authorship\n",
+        "*synthetic_control_6c\n",
+        "*German-credit\n",
+        "*madelon_no\n",
+        "*dna_no\n",
+        "*agaricus-lepiota\n",
+        "*breast_cancer\n",
+        "*digits"
+      ],
+      "metadata": {
+        "id": "rqfm-kfmClJA"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "-HOYZmqnClT4"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "ModuleNotFoundError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-8-d5819346fe49>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mtqdm\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtqdm\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mconfident_sinkhorn_allocation\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0malgorithm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpseudo_labeling\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mPseudo_Labeling\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0;31m#from confident_sinkhorn_allocation.algorithm.flexmatch import FlexMatch\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;31m#from confident_sinkhorn_allocation.algorithm.ups import UPS\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'confident_sinkhorn_allocation'",
-            "",
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
-          ],
-          "errorDetails": {
-            "actions": [
-              {
-                "action": "open_url",
-                "actionText": "Open Examples",
-                "url": "/notebooks/snippets/importing_libraries.ipynb"
-              }
-            ]
-          }
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
