--- a/demo_ConfidentSinkhornAllocation.ipynb
+++ b/demo_ConfidentSinkhornAllocation.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOveTgNrqdUdrqpJMaoBnhn",
+      "authorship_tag": "ABX9TyOztrYmGNglqp1DXMRbXdBN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -352,6 +352,35 @@
     {
       "cell_type": "code",
       "source": [
+        "!git clone https://ntienvu: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@github.com/ntienvu/confident_sinkhorn_allocation.git"
+      ],
+      "metadata": {
+        "id": "Oc3I_R6wDkbG",
+        "outputId": "b68f1bb6-6412-45ac-9c3d-8361637f5a19",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cloning into 'confident_sinkhorn_allocation'...\n",
+            "remote: Enumerating objects: 1714, done.\u001b[K\n",
+            "remote: Counting objects: 100% (148/148), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (100/100), done.\u001b[K\n",
+            "remote: Total 1714 (delta 81), reused 99 (delta 45), pack-reused 1566\u001b[K\n",
+            "Receiving objects: 100% (1714/1714), 50.06 MiB | 12.89 MiB/s, done.\n",
+            "Resolving deltas: 100% (440/440), done.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "import sys\n",
         "sys.path.append('..')\n",
         "\n",
@@ -384,16 +413,16 @@
       "source": [
         "# Get the data from the list of datasets:\n",
         "\n",
-        "*segment_2310_20\n",
-        "*wdbc_569_31\n",
-        "*analcatdata_authorship\n",
-        "*synthetic_control_6c\n",
-        "*German-credit\n",
-        "*madelon_no\n",
-        "*dna_no\n",
-        "*agaricus-lepiota\n",
-        "*breast_cancer\n",
-        "*digits"
+        "* segment_2310_20\n",
+        "* wdbc_569_31\n",
+        "* analcatdata_authorship\n",
+        "* synthetic_control_6c\n",
+        "* German-credit\n",
+        "* madelon_no\n",
+        "* dna_no\n",
+        "* agaricus-lepiota\n",
+        "* breast_cancer\n",
+        "* digits"
       ],
       "metadata": {
         "id": "rqfm-kfmClJA"
@@ -402,13 +431,34 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "dataset_name='digits'\n",
+        "#path_to_file='https://github.com/ntienvu/confident_sinkhorn_allocation/blob/master/all_data.pickle'\n",
+        "path_to_file='all_data.pickle'\n",
+        "x_train,y_train, x_test, y_test, x_unlabeled=get_train_test_unlabeled(dataset_name,path_to_file,random_state=0)"
       ],
       "metadata": {
-        "id": "-HOYZmqnClT4"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 321
+        },
+        "id": "-HOYZmqnClT4",
+        "outputId": "14ec0c12-bf9e-43ca-e51b-de1be4d088de"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "FileNotFoundError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-7-4fa27ca62e53>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m#path_to_file='https://github.com/ntienvu/confident_sinkhorn_allocation/blob/master/all_data.pickle'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mpath_to_file\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'all_data.pickle'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mx_train\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx_unlabeled\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mget_train_test_unlabeled\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdataset_name\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mpath_to_file\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mrandom_state\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/utilities/utils.py\u001b[0m in \u001b[0;36mget_train_test_unlabeled\u001b[0;34m(_datasetName, path_to_data, random_state)\u001b[0m\n\u001b[1;32m     58\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     59\u001b[0m     \u001b[0;31m# load the data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 60\u001b[0;31m     \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath_to_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rb'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mhandle\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     61\u001b[0m         \u001b[0;34m[\u001b[0m\u001b[0mall_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdatasetName_list\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhandle\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     62\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'all_data.pickle'"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
