--- a/demo_ConfidentSinkhornAllocation.ipynb
+++ b/demo_ConfidentSinkhornAllocation.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMfMrVBxDPW7KMAlTcvRPtP",
+      "authorship_tag": "ABX9TyNlPcIzaFHmbGdkvhrOI7JV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -465,11 +465,11 @@
         "print(ngrok.connect(8888))"
       ],
       "metadata": {
-        "id": "q3xhGHIKG7AC",
-        "outputId": "0c0c57e8-d4e5-4d1b-ca08-70265ef7539b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "q3xhGHIKG7AC",
+        "outputId": "0c0c57e8-d4e5-4d1b-ca08-70265ef7539b"
       },
       "execution_count": 12,
       "outputs": [
@@ -1169,11 +1169,11 @@
         "print(\"number of unlabelled points = \",x_unlabeled.shape[0])\n"
       ],
       "metadata": {
-        "id": "VJcf96UTT_1I",
-        "outputId": "8bd67026-3c5a-4062-a4c7-4af2b265d48b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "VJcf96UTT_1I",
+        "outputId": "8bd67026-3c5a-4062-a4c7-4af2b265d48b"
       },
       "execution_count": 26,
       "outputs": [
@@ -1218,18 +1218,18 @@
         "\n",
         "# evaluate the performance on the test set\n",
         "y_test_pred = xgb.predict(x_test)      \n",
-        "test_acc= np.round( accuracy_score(y_test_pred, y_test)*100, 2)# round to 2 digits xx.yy %\n",
+        "supervised_learning_accuracy= np.round( accuracy_score(y_test_pred, y_test)*100, 2)# round to 2 digits xx.yy %\n",
         "\n",
-        "print('+++Test Acc: {:.2f}%'.format(test_acc))\n"
+        "print('+++Test Acc: {:.2f}%'.format(supervised_learning_accuracy))\n"
       ],
       "metadata": {
-        "id": "nQYIJtyAUjRc",
-        "outputId": "bf4f0736-a092-407a-8b0b-9297123e9b5d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "nQYIJtyAUjRc",
+        "outputId": "b381a1ad-df7b-4cdf-ae02-43aa92d4820e"
       },
-      "execution_count": 31,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
@@ -1243,6 +1243,7 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# Perform Semi-supervised learning using Pseudo-labeling\n",
         "# Set a few hyperparameters for the model"
       ],
       "metadata": {
@@ -1255,14 +1256,210 @@
         "numTrials=1\n",
         "numIters=5\n",
         "upper_threshold=0.8\n",
-        "verbose=True\n",
         "dataset_name='digits'"
       ],
       "metadata": {
         "id": "egvG4QuLUVb1"
       },
-      "execution_count": null,
+      "execution_count": 34,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pseudo_labeling_model = Pseudo_Labeling(x_unlabeled,x_test,y_test, \n",
+        "                num_iters=numIters,\n",
+        "                upper_threshold=upper_threshold,\n",
+        "                verbose = True)\n",
+        "\n",
+        "pseudo_labeling_model.fit(x_train, y_train)\n",
+        "        \n",
+        "pseudo_labeling_accuracy=pseudo_labeling_model.test_acc"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Qlg10vE9VgMl",
+        "outputId": "d26a96c3-306a-4676-b3ce-5eed145f7471"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "no of unlabelled data: 1294 \t no of test data: 360\n",
+            "===== Pseudo_Labeling\n",
+            "==label_frequency without adjustment [22 20 16 13 18 11 17 12  6  8]\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            " 20%|██        | 1/5 [00:00<00:03,  1.06it/s]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+++Test Acc: 75.28%\n",
+            "MaxPseudoPoint [67, 61, 49, 40, 55, 34, 52, 37, 19, 25]\n",
+            "#augmented: [array([67, 61, 49, 40, 55, 34, 52, 37, 19, 25])]  no training data  582\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\r 40%|████      | 2/5 [00:02<00:03,  1.09s/it]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+++Test Acc: 76.11%\n",
+            "MaxPseudoPoint [36, 32, 26, 21, 29, 18, 28, 20, 10, 13]\n",
+            "#augmented: [array([67, 61, 49, 40, 55, 34, 52, 37, 19, 25]), array([36, 24, 26, 21, 29, 18, 28, 20, 10, 13])]  no training data  807\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\r 60%|██████    | 3/5 [00:03<00:02,  1.18s/it]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+++Test Acc: 76.67%\n",
+            "MaxPseudoPoint [20, 18, 15, 12, 16, 10, 15, 11, 6, 8]\n",
+            "#augmented: [array([67, 61, 49, 40, 55, 34, 52, 37, 19, 25]), array([36, 24, 26, 21, 29, 18, 28, 20, 10, 13]), array([20, 12, 15, 12, 16, 10, 15, 11,  6,  8])]  no training data  932\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\r 80%|████████  | 4/5 [00:04<00:01,  1.25s/it]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+++Test Acc: 76.11%\n",
+            "MaxPseudoPoint [11, 10, 8, 7, 9, 6, 9, 6, 3, 4]\n",
+            "#augmented: [array([67, 61, 49, 40, 55, 34, 52, 37, 19, 25]), array([36, 24, 26, 21, 29, 18, 28, 20, 10, 13]), array([20, 12, 15, 12, 16, 10, 15, 11,  6,  8]), array([11,  5,  8,  7,  9,  6,  9,  6,  3,  4])]  no training data  1000\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 5/5 [00:06<00:00,  1.25s/it]"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+++Test Acc: 77.22%\n",
+            "MaxPseudoPoint [5, 5, 4, 3, 4, 3, 4, 3, 2, 2]\n",
+            "#augmented: [array([67, 61, 49, 40, 55, 34, 52, 37, 19, 25]), array([36, 24, 26, 21, 29, 18, 28, 20, 10, 13]), array([20, 12, 15, 12, 16, 10, 15, 11,  6,  8]), array([11,  5,  8,  7,  9,  6,  9,  6,  3,  4]), array([5, 1, 4, 3, 4, 3, 4, 3, 2, 2])]  no training data  1031\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+++Test Acc: 78.89%\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "rovB8nYjVgVI"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Plot the accuracy"
+      ],
+      "metadata": {
+        "id": "o_sBQhLiWEpv"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!python -m pip uninstall matplotlib\n",
+        "!pip install matplotlib==3.1.3\n",
+        "\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "# plot in the same axis\n",
+        "\n",
+        "supervised_learning_result=[ supervised_learning_accuracy ]*len(pseudo_labeling_accuracy)\n",
+        "\n",
+        "plt.figure()\n",
+        "plt.plot(np.arange(len(pseudo_labeling_accuracy)),\\\n",
+        "         supervised_learning_result,'m:',linewidth=4,label=\"Supervised Learning\") \n",
+        "plt.plot(pseudo_labeling_accuracy,label='Pseudo-labeling')\n",
+        "\n",
+        "plt.xlabel(\"Pseudo-labeling Iteration\")\n",
+        "\n",
+        "\n",
+        "plt.xlabel(\"Test Accuracy\")\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "d6vOdyqvWHWR",
+        "outputId": "6ac015f4-ff5f-4128-f7e1-6951c50567d7"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Found existing installation: matplotlib 3.5.2\n",
+            "Uninstalling matplotlib-3.5.2:\n",
+            "  Would remove:\n",
+            "    /usr/local/lib/python3.7/dist-packages/matplotlib-3.5.2-py3.7-nspkg.pth\n",
+            "    /usr/local/lib/python3.7/dist-packages/matplotlib-3.5.2.dist-info/*\n",
+            "    /usr/local/lib/python3.7/dist-packages/matplotlib/*\n",
+            "    /usr/local/lib/python3.7/dist-packages/mpl_toolkits/axes_grid/*\n",
+            "    /usr/local/lib/python3.7/dist-packages/mpl_toolkits/axes_grid1/*\n",
+            "    /usr/local/lib/python3.7/dist-packages/mpl_toolkits/axisartist/*\n",
+            "    /usr/local/lib/python3.7/dist-packages/mpl_toolkits/mplot3d/*\n",
+            "    /usr/local/lib/python3.7/dist-packages/mpl_toolkits/tests/*\n",
+            "    /usr/local/lib/python3.7/dist-packages/pylab.py\n",
+            "Proceed (y/n)? "
+          ]
+        }
+      ]
     }
   ]
 }
