--- a/demo_multilabel_classification_CSA.ipynb
+++ b/demo_multilabel_classification_CSA.ipynb
@@ -6,7 +6,7 @@
       "name": "demo_multilabel_classification_CSA.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOfNRzL3Mojw0bPuxYxHEWs",
+      "authorship_tag": "ABX9TyOtlEjsn4ecz59LjlfRSq+K",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -274,18 +274,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Get the data from the list of datasets:\n",
+        "# Multilabel datasets\n",
         "\n",
-        "* segment_2310_20\n",
-        "* wdbc_569_31\n",
-        "* analcatdata_authorship\n",
-        "* synthetic_control_6c\n",
-        "* German-credit\n",
-        "* madelon_no\n",
-        "* dna_no\n",
-        "* agaricus-lepiota\n",
-        "* breast_cancer\n",
-        "* digits"
+        "* yeast\n",
+        "* emotions"
       ],
       "metadata": {
         "id": "rqfm-kfmClJA"
@@ -634,7 +626,7 @@
       "cell_type": "code",
       "source": [
         "num_XGB_models=10\n",
-        "confidence_choice='ttest'\n",
+        "confidence_choice='variance'\n",
         "\n",
         "csa_model = CSA(x_unlabeled,x_test,y_test, \n",
         "                num_iters=numIters,\n",
