--- a/demo_multilabel_classification_CSA.ipynb
+++ b/demo_multilabel_classification_CSA.ipynb
@@ -6,7 +6,7 @@
       "name": "demo_multilabel_classification_CSA.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOtlEjsn4ecz59LjlfRSq+K",
+      "authorship_tag": "ABX9TyP8h08x5m7xc+r86zEtTjZG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -400,8 +400,10 @@
         "numTrials=1\n",
         "numIters=5\n",
         "upper_threshold=0.8\n",
-        "dataset_name='digits'\n",
-        "IsMultiLabel=True"
+        "dataset_name='emotions'\n",
+        "\n",
+        "#======================================================= set multilabel classification here\n",
+        "IsMultiLabel=True "
       ],
       "metadata": {
         "id": "egvG4QuLUVb1"
